example/kube-config/kube-presentation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-presentation-service
  namespace: kubepresentation
  labels:
    serv: kube-presentation
spec:
  ports:
  - name: http-master
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kube-presentation
